# test-feature-activations-2026

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
scripts/: fetch_vote_v4_accounts.sh  test_stake_with_v4_vote_accounts.sh
simd-0185/: Cargo.toml
simd-0185/interface/: Cargo.toml
simd-0185/interface/src/: lib.rs
simd-0185/src/: lib.rs
simd-0321/: Cargo.toml
simd-0321/interface/: Cargo.toml
simd-0321/interface/src/: lib.rs
simd-0321/src/: lib.rs
simd-0387/: Cargo.toml
simd-0387/interface/: Cargo.toml
simd-0387/interface/src/: lib.rs
simd-0387/src/: lib.rs
