[workspace]
members = [
    "cli",
    "simd-0185",
    "simd-0185/interface",
    "simd-0321",
    "simd-0321/interface",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
solana-cpi = "3.1"
solana-program-entrypoint = "3.1"
solana-pubkey = "4.0"
solana-vote-interface = "5.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-panic", "custom-heap", "sbpf-v3"))',
    'cfg(target_feature, values("dynamic-frames"))',
]
