[workspace]
members = [
    "simd-0185",
    "simd-0185/interface",
    "simd-0321",
    "simd-0321/interface",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
sha2-const-stable = "0.1.0"
solana-account-info = "3.1"
solana-cpi = "3.1"
solana-instruction = "3.1"
solana-msg = "3.0"
solana-program-entrypoint = "3.1"
solana-program-error = "3.0"
solana-pubkey = "4.0"
solana-sdk-ids = "3.1.0"
solana-sha256-hasher = "3.1"
solana-vote-interface = "5.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-panic", "custom-heap", "sbpf-v3"))',
    'cfg(target_feature, values("dynamic-frames"))',
]
