[package]
name = "helpers"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-transaction = { workspace = true }

[lints]
workspace = true
