[package]
name = "simd-0185"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "simd-0185"
path = "bin/main.rs"

[dependencies]
simd-0185-interface = { path = "interface" }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-vote-interface = { workspace = true, features = ["bincode"] }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }

[lints]
workspace = true
