[package]
name = "simd-0185"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "simd-0185"
path = "bin/main.rs"
required-features = ["bin"]

[features]
bin = [
    "dep:solana-cli-config",
    "dep:solana-client",
    "dep:solana-commitment-config",
    "dep:solana-keypair",
    "dep:solana-transaction",
]

[dependencies]
simd-0185-interface = { path = "interface" }
solana-account-info = { workspace = true }
solana-cli-config = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-commitment-config = { workspace = true, optional = true }
solana-cpi = { workspace = true }
solana-keypair = { workspace = true, optional = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-transaction = { workspace = true, optional = true }
solana-vote-interface = { workspace = true, features = ["bincode"] }

[dev-dependencies]
mollusk-svm = { workspace = true, features = ["all-builtins"] }
solana-account = { workspace = true }

[lints]
workspace = true
