[package]
name = "simd-0185"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "simd-0185"
path = "bin/main.rs"
required-features = ["bin"]

[[bin]]
name = "simd-0185-stake"
path = "bin/stake.rs"
required-features = ["bin"]

[features]
bin = ["dep:helpers"]

[dependencies]
helpers = { workspace = true, optional = true }
simd-0185-interface = { path = "interface" }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-stake-interface = { workspace = true, features = ["bincode"] }
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-vote-interface = { workspace = true, features = ["bincode"] }

[dev-dependencies]
agave-feature-set = { workspace = true }
mollusk-svm = { workspace = true, features = ["all-builtins"] }
solana-account = { workspace = true }
solana-instruction = { workspace = true }

[lints]
workspace = true
