[package]
name = "simd-0321"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "simd-0321"
path = "bin/main.rs"
required-features = ["bin"]

[features]
bin = ["dep:helpers"]

[dependencies]
helpers = { workspace = true, optional = true }
simd-0321-interface = { path = "interface" }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }

[dev-dependencies]
agave-feature-set = { workspace = true }
mollusk-svm = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-svm-log-collector = { workspace = true }

[lints]
workspace = true
