[package]
name = "simd-0387"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "simd-0387"
path = "bin/main.rs"
required-features = ["bin"]

[features]
bin = [
    "dep:helpers",
    "dep:solana-account",
    "dep:solana-vote-program",
]

[dependencies]
helpers = { workspace = true, optional = true }
simd-0387-interface = { path = "interface" }
solana-account = { workspace = true, optional = true }
solana-account-info = { workspace = true }
solana-bls-signatures = { workspace = true, features = ["serde"], optional = true }
solana-cpi = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-stake-interface = { workspace = true, features = ["bincode"] }
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-vote-interface = { workspace = true, features = ["bincode"] }
solana-vote-program = { workspace = true, features = ["agave-unstable-api"], optional = true }

[dev-dependencies]
agave-feature-set = { workspace = true }
mollusk-svm = { workspace = true, features = ["all-builtins"] }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-vote-program = { workspace = true, features = ["agave-unstable-api"] }

[lints]
workspace = true
