[package]
name = "simd-0185-interface"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
sha2-const-stable = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-sdk-ids = { workspace = true }
solana-sha256-hasher = { workspace = true }

[lints]
workspace = true
