[package]
name = "simd-0387-interface"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-instruction = { workspace = true, features = ["bincode"] }
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-sdk-ids = { workspace = true }
solana-vote-interface = { workspace = true, features = ["bincode"] }

[dev-dependencies]
solana-vote-program = { workspace = true, features = ["agave-unstable-api"] }

[lints]
workspace = true
